# lenovo-logo-changer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml  rust.yml
contributions/: bounty-1777225947.md
example_img/: pcx1.pcx
src/: esp_partition.rs  i18n.rs  lenlogo.rs  main.rs  winfunc.rs
src/platform/: linux.rs  mod.rs  windows.rs
