[package]
name = "lenovo-logo-changer"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
efivar = "2.0.0"
eframe = "0.25.0"
egui = "0.25.0"
hex = "0.4.3"
rfd = "0.13.0"
sha2 = "0.10.8"


[dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
]

[build-dependencies]
winres = "0.1"

[profile.release]
strip = true
lto = true
