[package]
name = "lenovo-logo-changer"
version = "0.1.3"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
efivar = "2.0.0"
eframe = "0.31.1"
egui = "0.31.1"
hex = "0.4.3"
rfd = "0.15.2"
sha2 = "0.10.8"


[dependencies.windows-sys]
version = "0.59.0"
features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_Storage_FileSystem"]

[build-dependencies]
winresource = "0.1"

[profile.release]
strip = true
lto = true
