[package]
name = "lenovo-logo-changer"
version = "0.2.0"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
log = "0.4"
efivar = "2.0.0"
eframe = "0.33.0"
egui = "0.33.0"
hex = "0.4.3"
rfd = "0.15.4"
sha2 = "0.10.9"
poll-promise = "0.3"

# Windows特定依赖
[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.61.2"
features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_Storage_FileSystem"]

# Linux特定依赖
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[build-dependencies]
winresource = "0.1"

[profile.release]
strip = true
lto = true
opt-level = "z" 